# hetionet-analysis

./: .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  LICENSE  README.md  pyproject.toml
.github/workflows/: run-tests.yml
src/bioprocess_metapath_to_gene_pval_and_dwpc/: gather_all_data.ipynb  gather_all_data.py  gather_data.ipynb  gather_data.py  gather_subset_data_metapath_ BPpGdAdG.ipynb  gather_subset_data_metapath_ BPpGdAdG.py  gather_subset_data_metapath_BPpGdAdG.ipynb  gather_subset_data_metapath_BPpGdAdG.py  readme.md
src/bioprocess_metapath_to_gene_pval_and_dwpc/data/sources/: BP.csv  Gene.csv  metapaths.csv  metapaths_ignore.csv
src/hetionet_utils/: combination.py  database.py
tests/: conftest.py  test_combinations.py  test_database.py  utils.py
