[build-system]
build-backend = "setuptools.build_meta"
requires = [ "setuptools>=64", "setuptools-scm>=8" ]

[project]
name = "hetnet-analysis"
description = "Demonstrating Pythonic uv usage with dynamic versioning."
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dynamic = [ "version" ]
dependencies = [
  "black>=24.10.0",
  "hetmatpy>=0.1.0",
  "ipywidgets>=8.1.5",
  "isort>=5.13.2",
  "jupyterlab-code-formatter>=3.0.2",
  "jupyterlab>=4.3.0",
  "jupytext>=1.16.4",
  "lancedb>=0.15.0",
  "neo4j>=5.26.0",
  "requests>=2.32.3",
]

[tool.setuptools_scm]
root = "."

[tool.ruff]
target-version = "py38"
line-length = 88
fix = true
lint.select = [
  # flake8-builtins
  "A",
  # flake8-annotations
  "ANN",
  # flake8-comprehensions
  "C4",
  # mccabe
  "C90",
  # pycodestyle
  "E",
  # pyflakes
  "F",
  # isort
  "I",
  # pylint
  "PL",
  # ruff
  "RUF",
  # flake8-simplify
  "SIM",
  "W",
]

# Ignore `E402` and `F401` (unused imports) in all `__init__.py` files
lint.per-file-ignores."__init__.py" = [ "F401" ]

[tool.uv]
dev-dependencies = [
  "setuptools-scm>=8.1.0",
  "poethepoet>=0.29",
  "pre-commit>=4.0.1",
  "pytest>=8.3.3",
]

[tool.poe.tasks]
# install the project for development purposes
setup.shell = """
uv pip install '.[dev]'
# run testing on development source
"""
test.shell = """
uv run pre-commit run -a
uv run pytest
"""
